# isbnr

./: .gitignore  Cargo.toml  LICENSE
src/: book.rs  isbn.rs  lib.rs  lookup.rs  main.rs
src/lookup/: google_books.rs  ndl_search.rs  openbd.rs
tests/: isbn_test.rs
