[package]
name = "isbn_register"
version = "0.1.0"
authors = ["lesguillemets <lesguillemets@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.6", features = ["blocking"] }
serde_json = "1.0.70"
roxmltree = "0.14.1"
